--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base{
     body {
-        @apply bg-['#F8F6F4'] dark:bg-black
+        @apply dark:bg-black bg-['#F8F6F4']
         
     }
 }
