--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,9 @@
 
 @layer base{
     body {
-        @apply dark:bg-black bg-['#F8F6F4']
+        @apply dark:bg-black bg-pastel-white
+        
         
     }
 }
+
