--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,8 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: '#EEE9DA';
-    border: 3px solid '#594545';
+    background-color: '#594545';
+    border: 3px solid '#EEE9DA';
     border-radius: 10px;
 }
 
